--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -153,7 +153,7 @@ spec:
         - --resources=volumeattachments
 {{  end  }}
 {{ if .Values.namespaces }}
-        - --namespaces={{ .Values.namespaces | join "," }}
+        - --namespaces={{ tpl .Values.namespaces $ | join "," }}
 {{ end }}
 {{ if .Values.autosharding.enabled }}
         - --pod=$(POD_NAME)
